# ArkPulse

./: .gitignore  README.md  cargo_errors.txt  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
lib/: main.dart
lib/app/: app.dart
lib/models/: playlist.dart  track_metadata.dart  webdav_config.dart
lib/services/: app_notifications.dart  database_service.dart  smtc_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/state/: app_state.dart
lib/theme/: app_theme.dart
lib/ui/views/: dashboard.dart  library.dart  main_layout.dart  player.dart  settings.dart
lib/ui/widgets/: app_dialogs.dart  app_menu_button.dart  diagonal_container.dart  halftone_bg.dart  tech_grid_bg.dart  tech_panel.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: main.cc  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
native/: Cargo.toml
rust/: Cargo.toml  errors.txt  errors_utf8.txt
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  player_api.rs  simple.rs  webdav_api.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_arkpulse.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_arkpulse.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
windows/: CMakeLists.txt  installer.iss
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+15 files in other folders)
