[package]
name = "rust_lib_arkpulse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
    "json",
    "stream",
] }
tokio = { version = "1.0", features = ["full"] }
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.12.3"
urlencoding = "2.1.3"
lazy_static = "1.5.0"
rodio = { version = "0.20.1", features = ["symphonia-all"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
